# lib/api-spec/openapi.yaml
@@ -294,6 +294,9 @@ components:
           type: number
         cena:
           type: number
+        price_source:
+          type: string
+          enum: [unit_cost, price_list, missing]
         uom:
           type: string
         replenishment:
@@ -304,6 +307,14 @@ components:
           type: number
         dejansko:
           type: number
+        order_multiple:
+          type: number
+        order_qty:
+          type: number
+        order_value:
+          type: number
+        has_substitutes:
+          type: boolean
         nadomestki:
           type: array
           items:
@@ -313,9 +324,14 @@ components:
         - opis
         - zaloga
         - cena
+        - price_source
         - uom
         - replenishment
         - kolicina
         - totalSubStock
         - dejansko
+        - order_multiple
+        - order_qty
+        - order_value
+        - has_substitutes
         - nadomestki
